[gd_scene load_steps=14 format=1]

[ext_resource path="res://assets/Images/bg/Space_bkgr.png" type="Texture" id=1]
[ext_resource path="res://scripts/background.gd" type="Script" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Sounds/soundtrack/Cosmo_Blast_v1_0.ogg" type="AudioStream" id=5]
[ext_resource path="res://scripts/pause.gd" type="Script" id=6]
[ext_resource path="res://resources/grayscaleshader.tres" type="Shader" id=7]
[ext_resource path="res://assets/Images/white.png" type="Texture" id=8]
[ext_resource path="res://assets/Fonts/scorefont.fnt" type="BitmapFont" id=9]
[ext_resource path="res://assets/Fonts/labelfont.fnt" type="BitmapFont" id=10]
[ext_resource path="res://scripts/instructions.gd" type="Script" id=11]
[ext_resource path="res://scripts/welcome.gd" type="Script" id=12]

[sub_resource type="CanvasItemMaterial" id=1]

shader/shader = ExtResource( 7 )
shader/shading_mode = 0
shader_param/brightness = 1.0
shader_param/contrast = 1.0
shader_param/saturation = 1.0

[node name="game" type="Node2D"]

__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )
centered = false
region = true
region_rect = Rect2( 0, 0, 5000, 800 )
script/script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="player" parent="." instance=ExtResource( 3 )]

[node name="enemy" parent="." instance=ExtResource( 4 )]

[node name="soundtrack" type="StreamPlayer" parent="."]

process/pause_mode = 1
stream/stream = ExtResource( 5 )
stream/play = true
stream/loop = true
stream/volume_db = 1.0
stream/autoplay = true
stream/paused = true
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="pause" type="Node2D" parent="."]

process/pause_mode = 2
transform/pos = Vector2( -5.99054, -8.24774 )
script/script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="layer" type="CanvasLayer" parent="pause"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="shade" type="Sprite" parent="pause/layer"]

material/material = SubResource( 1 )
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="instructions" type="RichTextLabel" parent="pause/layer"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 317.0
margin/top = 90.0
margin/right = 870.0
margin/bottom = 675.0
custom_fonts/bold_font = ExtResource( 9 )
custom_fonts/normal_font = ExtResource( 10 )
bbcode/enabled = false
bbcode/bbcode = "F      : toggle fullscreen"
visible_characters = -1
script/script = ExtResource( 11 )

[node name="pause" type="Label" parent="pause/layer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 431.0
margin/top = 313.0
margin/right = 627.0
margin/bottom = 375.0
custom_fonts/font = ExtResource( 9 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 12 )

[node name="confirm_quit" type="ConfirmationDialog" parent="pause/layer"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 594.009
margin/top = 341.752
margin/right = 718.009
margin/bottom = 399.752
popup/exclusive = true
window/title = "Please Confirm..."
dialog/text = "Exit the game?"
dialog/hide_on_ok = true

[connection signal="confirmed" from="pause/layer/confirm_quit" to="pause" method="_on_confirm_quit_confirmed"]

[connection signal="popup_hide" from="pause/layer/confirm_quit" to="pause" method="_on_confirm_quit_popup_hide"]


